[tool.poetry]
name = "md5-brute-force"
version = "0.2.0"
description = "Python script for brute forcing an md5 hash."
authors = ["Vsevolod Mineev <vsevolod.mineev@gmail.com>"]
license = "MIT License"
packages = [
    { include = "main.py" },

]

[tool.poetry.dependencies]
python = "^3.9,<3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
